--- a/sVanilla/src/SUI/AddLinkLineEdit.ui
+++ b/sVanilla/src/SUI/AddLinkLineEdit.ui
@@ -1,42 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SearchLineEdit</class>
- <widget class="QLineEdit" name="SearchLineEdit">
+ <class>AddLinkLineEdit</class>
+ <widget class="QLineEdit" name="AddLinkLineEdit">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
-    <height>55</height>
+    <width>453</width>
+    <height>48</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>SearchLineEdit</string>
   </property>
-  <widget class="QPushButton" name="btnSearch">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>:/icon/home/search.svg</normaloff>:/icon/home/search.svg</iconset>
-   </property>
-   <property name="_vanillaStyle_Patch" stdset="0">
-    <string>AppIconButtonPatch</string>
-   </property>
-  </widget>
+  <property name="clearButtonEnabled">
+   <bool>false</bool>
+  </property>
   <widget class="QPushButton" name="btnClear">
    <property name="geometry">
     <rect>
-     <x>480</x>
+     <x>230</x>
      <y>10</y>
      <width>100</width>
      <height>32</height>
@@ -53,7 +42,48 @@
     <string>AppIconButtonPatch</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="btnSearch">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icon/home/search.svg</normaloff>:/icon/home/search.svg</iconset>
+   </property>
+   <property name="_vanillaStyle_Patch" stdset="0">
+    <string>AppIconButtonPatch</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnWebsite">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/icon/website/default.svg</normaloff>:/icon/website/default.svg</iconset>
+   </property>
+   <property name="_vanillaStyle_Patch" stdset="0">
+    <string>AppIconButtonPatch</string>
+   </property>
+  </widget>
  </widget>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
