--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -19,6 +19,7 @@
         <file>icon/home/history.svg</file>
         <file>icon/home/enter.svg</file>
         <file>icon/home/openurl.svg</file>
+        <file>icon/home/add.svg</file>
         <file>icon/video/grid.svg</file>
         <file>icon/video/list.svg</file>
         <file>icon/video/detail.svg</file>
